<resources>
    <string name="app_name">Smid</string>
    <string name="action_settings">Settings</string>
    <string name="btnNewG">New g</string>
    <string name="title_activity_gesture_list">GestureList</string>
    <string name="title_activity_action_gesture_association">ActionGestureAssociation</string>
    <string name="GestureName">Gesture name:</string>
    <string name="btnSave">Save changes</string>
    <string name="GestureAssociatedAction">Action:</string>
    <string name="noActionAssociatedWithGesture">No action associated.</string>
    <string name="title_activity_acc">AccActivity</string>
    <string name="title_activity_edit_gesture">EditGesture</string>
    <string name="Gesture_BtnChangeAction">Change Action</string>
    <string name="title_activity_action_list">ActionList</string>
    <string name="ActionList_AddNewAction">Add new action</string>
    <string name="ActionList_SelectAction">Confirm selection</string>
    <string name="title_activity_action_details">ActionDetails</string>
    <string name="SelectAction_SelectActionType">Please select action type</string>
    <string name="ActionType_Phone">Phone</string>
    <string name="ActionType_Phone_Descrition">Start a phone call to somebody!</string>
    <string name="ActionType_SMS">SMS</string>
    <string name="ActionType_SMS_Descrition">Send a message to someone!</string>
    <string name="Gesture_BtnChangeName">Change name</string>
    <string name="Gesture_BtnConfirmChangeName">Confirm changes</string>
    <string name="Gesture_BtnCancelChangeName">Cancel</string>
    <string name="Gesture_Move_Label">Gesture move:</string>
    <string name="already_existing_gesture_part_1">There is other gesture with name:</string>
    <string name="already_existing_gesture_part_2">. Please provide another gesture name.</string>
    <string name="trying_to_delete_gesture_part_1">You\'re trying to delete</string>
    <string name="trying_to_delete_gesture_part_2">gesture. Please confirm.</string>
    <string name="ActionType_PlayMusic">Play music</string>
    <string name="ActionType_PlayMusic_Description">start playing some music after detecting a gesture!</string>
    <string name="GestureRegisteringDetectedMove">This is the recorded move:</string>
    <string name="GestureRegisteringIsItWhaYouWantedToRecord">Is it what you wanted to record?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="GestureRegistering_NewGestureName">Please enter new gesture name:</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="FlowGestureRegistering_NewGesture__GestureDetails_part_1">New gesture named</string>
    <string name="FlowGestureRegistering_NewGesture__GestureDetails_part_2"> has just been saved. You can assosiate it with some action.</string>
    <string name="GestureNameMustNotBeEmpty">Gesture name must not be empty</string>
    <string name="TooltipText_Flow_MainMenu_GestureList">This is list of all your gestures. Click on any to see or change its details. Click "Add new Gesture" button.</string>
    <string name="perf_description_show_help_texts">Show help text at top of the application</string>
    <string name="perf_title_show_help_texts">Help text</string>
    <string name="GestureDetails_Flow_SelectActionAssociated">Select action which should be associated with</string>
    <string name="GestureDetails_Flow_SelectActionAssociated_part2">or create new action by clicking "New action".</string>
    <string name="gestureRegistering_Information">Don\'t move phone for some time and wait until status is Recording.</string>
    <string name="GestureRegistering_WaitintNomove">Waiting</string>
    <string name="GestureRegistering_Status_Registering">Registering</string>
    <string name="GestureRegistering_Status_AfterRegistering">after registering</string>
    <string name="GestureRegistering_StatusLabel">Status</string>
    <string name="GestureRegistering_After_Gesture_Registered_Information">Gesture registration complete.</string>
    <string name="pref_description_start_sticky">Run gesture detection service as foreground process. This consumes more CPU and battery, but allows Gesture Detector work when phone\'s screen is turned off.</string>
    <string name="pref_title_start_sticky">Run Gesture Detector as foreground service</string>
    <string name="FlowActionList_ActionDetails">Here you can see details of action</string>
    <string name="FlowActionList_ActionDetails_2">You can delete this action by clicking pressing button.</string>
    <string name="ActionName_Label">Action name:</string>
    <string name="ActionDetails_TryingToDeleteActionNamed">Trying to delete action</string>
    <string name="ActionDetails_TryingToDeleteActionNamed_2">Please confirm.</string>
    <string name="ActionDetails_DeletingAssociatedGestures_1">Deleting action</string>
    <string name="ActionDetails_DeletingAssociatedGestures_2">will trigger deleting following gestures:</string>
    <string name="Action_Phone_Invalid_Phone_Number_1">Sorry but phone number for</string>
    <string name="Action_Phone_Invalid_Phone_Number_2">is probably not defined.</string>
    <string name="Action_Error_During_Executing_Action">Something went wrong. Please contact application author.</string>
    <string name="GestureDetails_Delete">delete gesture</string>
    <string name="pref_description_use_wake_lock">Detecting gestures while phone screen is off. This may use lot of battery power.</string>
    <string name="perf_title_use_wake_lock">Gesture detectin while screen is off</string>
    <string name="pref_description_start_foreground">Run Gesture Detector\'s as foreground service. This will make application more reliable and will present notification in notification bar.</string>
    <string name="pref_title_start_foreground">Run Gesture Detector as foreground service.</string>
    <string name="GDService_StartText">Gesture Detector\'s service</string>
    <string name="GestureRegistering_SuchGestureAlreadyRegisterd">Such gesture already registered. It\'s named</string>
    <string name="GestureRegistering_SuchGestureAlreadyRegisterd_1">. You can register another gesture</string>
    <string name="GestureList_AddNewGesture">Add new gesture</string>
    <string name="GestureRegistering_Description">Here you can register a gesture.</string>
    <string name="GestureRegistering_OK_GestureWithMoveExists_GotoMainMenu">Go to main menu</string>
    <string name="GestureREgistering_GestureWithMoveExists_TryRegisterAnotherMove">Try prepare another gesture</string>
    <string name="ExternalServiceRegistration_Description_1">Application</string>
    <string name="ExternalServiceRegistration_Description_2">wants to be able to privde actions for gesture detector. Do you agree ?</string>
    <string name="ExternalServiceRegistration_NotAddingExternalService">External service will not be added.</string>
    <string name="ExternalServiceRegistration_ErrorWhileRegistering">Service with same</string>
    <string name="SelectActionExternalSoruce_ErrorSavingAction">Error during creating action</string>
    <string name="Action_UnkownActionType">Unknown action type.</string>
    <string name="MainActivity_NOT_SUFFICIENT_ACCELEROMETER">Unfrotunatelly accelerometer in your phone does not have enought capabilities to run this application.</string>
    <string name="MainActivity_TestingAccelerometer">Application has not tested your phone since it was installed. Currently its testing your phone.It will take about 10 seconds.</string>
    <string name="MainActivity_TxtInfo_PhoneDoesntMeetCriteria">Unfortunatelly your phone\'s sensors arent accurrate enought.</string>
    <string name="GDService_Notification">Gesture Detector service running.</string>
    <string name="PhoneCall_FriendlyNamePrefix">Phone to</string>
    <string name="PhoneCallService_ServiceName">Phone call</string>
    <string name="SMSMessage_FriendlyName">SMS Message</string>
    <string name="GestureDetails_BackToMainMenu">Go to main menu</string>
    <string name="SelectActionExternalSource_DidntProvideValue">No action details data was returned from</string>
    <string name="SelectActionExternalSource_DidntProvideValue_2">service.</string>
    <string name="GDService_NotificationContentTitle">Gesture Detector Service</string>
    <string name="GDService_NotificationContentText">Detects gestures.</string>
    <string name="GestureDetection_Status_RecordingMove">Recording</string>
    <string name="GestureDetection_Description_MakeAGesture">Gesture is beeing registered right now.</string>
    <string name="GestureDetection_Description_WaitingForNomove">Dont move your phone for 5 seconds, until status is changed to \"Registering\". Then you may start registering a gesture.</string>
    <string name="GestureDetection_Status_GestureReceived">Gesture detected.</string>
    <string name="GestureDetection_NoGestureWasDetected">No gesture was detected</string>
    <string name="GestureDetection_SuchGestureIsNotSaved">There is no such gesture saved in Gesture Detector. If you want to save recorded gesture, please click button "Save recorded gesture".</string>
    <string name="GestureDetection_DetectedGesture">Detected gesture:</string>
    <string name="GestureDetection_CreateNewGesture">Save recorded gesture</string>
    <string name="GestureDetection_DetectOnceMore">replay gesture detection</string>
    <string name="gestureRegistering_GestureDetectionComplete">Gesture detection complete</string>
    <string name="GestureDetection_GestureDetection_NoGestureDetected">No gesture was detected</string>
    <string name="Menu_GestureList">Gesture list</string>
    <string name="Menu_ActionList">Action list</string>
    <string name="Menu_AddNewAction">New Action</string>
    <string name="Menu_GoToMainMenu">Menu</string>
    <string name="GestureDetection_TooltipText">Here you can add/detect gesture. In any case first you have to wait wait until status is Registering, then perform gesture. After that you will be able to save gesture if it has not been saved before.</string>
    <string name="PhoneCall_SelectContact_ContactHasNoNUmber">This contact seem not to have phone number associated with it</string>
    <string name="Menu_RegisterGesture">Detect/Add gesture</string>
    <string name="Menu_Settings">Settings</string>
    <string name="GestureDetection_NowYouCanMakeAGesture">Please make a gesture</string>
    <string name="pref_description_play_sound">Play sound during gesture detetion, to indicate that next move can be performed. Note that sound will be played only when your phone is not muted.</string>
    <string name="pref_title_play_sound">Play sound during gesture detection</string>
    <string name="Payment_Description">If you want to save more than two gestures, you can improve your instance of Gesture Detector. To do this, buy this functionality, it costs</string>
    <string name="Payment_WaitInfo">Getting information about price...</string>
    <string name="pref_description_show_image">During gesture detection, show \"flash\" image helping when to start next move.</string>
    <string name="pref_title_show_image">Flash image during gesture detection</string>
    <string name="Payment_ButtonBuy">Buy access to adding more than two gestues. It costs</string>
    <string name="Menu_About">About</string>
    <string name="About_Description">Smid</string>
    <string name="About_Description2">www.gdapplication.com</string>
    <string name="About_Description3">You are using this application on your own responsibility. Neither author nor distributor takes any responsibility for your usage of this application.</string>
    <string name="pref_title_work_as_tasker_plugin">Work as tasker plugin</string>
    <string name="pref_description_work_as_tasker_plugin">If set then Smid will work as Tasker plugin. Otherwise it will work as standalone application.</string>
</resources>