<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"

    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/MainActivity_MainLayout"
    style="@style/MainLayout"
    tools:context="com.smid.app.GestureDetectorMainMenu">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivity_TestingAccelerometer"
        android:id="@+id/MainActivity_InfoTesting"
        android:visibility="gone"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/ContentListLayout"
        xmlns:tools="http://schemas.android.com/tools"
        android:visibility="gone"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.smid.app.GestureDetectorMainMenu"
        android:id="@+id/MainActivity_ContentLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="menuClick"
            android:id="@+id/Menu_RegisterGesture"
            android:text="@string/Menu_RegisterGesture"/>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/Menu_GestureList"
            android:layout_height="wrap_content"
            android:id="@+id/Menu_GestureList"
            android:onClick="menuClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Menu_ActionList"
            android:onClick="menuClick"
            android:text="@string/Menu_ActionList"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="menuClick"
            android:id="@+id/Menu_NewAction"
            android:text="@string/Menu_AddNewAction"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="menuClick"
            android:id="@+id/Menu_Settings"
            android:text="@string/Menu_Settings"
            android:drawableBottom="@android:drawable/ic_menu_preferences"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="menuClick"
            android:id="@+id/Menu_About"
            android:text="@string/Menu_About" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
