<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"

    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:id="@+id/About_MainLayout"
        style="@style/MainLayout"
        tools:context="com.smid.app.AboutActivity">

        <include layout="@layout/toolbar"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/ContentSimpleLayout"
            xmlns:tools="http://schemas.android.com/tools"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.smid.app.GestureDetectorMainMenu"
            android:id="@+id/MainActivity_ContentLayout">


            <TextView
                style="@style/ObjectDetailsLabel"
                android:text="@string/About_Description"/>
<Space
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
android:minHeight="10pt" />
            <TextView
                style="@style/ObjectDetailsLabel"
                android:autoLink="web"
                android:text="@string/About_Description2"/>
            <Space
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="10pt" />
            <TextView
                style="@style/ObjectDetailsLabel"
                android:text="@string/About_Description3"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
