<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/MainActivity_MainLayout"
    style="@style/MainLayout"
    tools:context="com.smid.app.payments.PaymentActivityDebug">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/Payment_Info"
        style="@style/ObjectDetailsLabel"
        android:text="@string/Payment_WaitInfo"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/ContentSimpleLayout"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.smid.app.GestureDetectorMainMenu"
        android:id="@+id/MainActivity_ContentLayout"
        android:visibility="gone"
        android:textAlignment="center">

        <TextView
            style="@style/ObjectDetailsLabel"
            android:id="@+id/Payment_WhatCanBuyDescription"
            android:text="@string/Payment_Description"/>

        <Button
            style="@style/DefaultButton"
            android:text="@string/Payment_ButtonBuy"
            android:onClick="onClick"
            android:id="@+id/Payment_BtnBuy"/>

        <Button
            style="@style/DefaultButton"
            android:text="Get purchases"
            android:onClick="onClick"
            android:id="@+id/Payment_getPurchases"/>

        <Button
            style="@style/DefaultButton"
            android:text="Consume test pay"
            android:onClick="onClick"
            android:id="@+id/Payment_Consume"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Payment_TextPurhcases"/>

        <Button
            style="@style/DefaultButton"
            android:text="Print hasAccess"
            android:onClick="onClick"
            android:id="@+id/Payment_PrintHasAccess"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Payment_TextHasAccess"/>


    </LinearLayout>

</LinearLayout>
